# kivy-opencv-zbar-scanner

./: Pipfile  README.md  development.py  pyproject.toml
kv/: appsettings.kv  body.kv  camera.kv  camerapreview.kv  card.kv  cardhelper.kv  clock.kv  debugcharacter.kv  facehelper.kv  mainwindow.kv  simpleclock.kv  systemmessage.kv
simplecamera/: app.py  appsettings.py  body.py  camera.py  camerapreview.py  card.py  cardhelper.py  constants.py  debugcharacter.py  facehelper.py  mainwindow.py  mixins.py  numpyimage.py  simpleclock.py  systemmessage.py
simplecamera/lib/: cardscan.py  kqueue.py  resources.py  singleton.py
tests/: test_amazon_rekognition.py  test_microsoft_cognitive.py
